// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Note /> renders correctly 1`] = `
<styled.div
  data-bdd="note-item-e2054c02-08dd-e811-80d2-005056825b41"
  key="e2054c02-08dd-e811-80d2-005056825b41"
>
  <styled.div>
    <styled.span>
      Date
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-date"
    >
      10/08/2018 - 8:52pm
    </span>
    <br />
  </styled.div>
</styled.div>
`;

exports[`<Note /> renders correctly with a file upload status 1`] = `
<styled.div
  data-bdd="note-item-e2054c02-08dd-e811-80d2-005056825b41"
  key="e2054c02-08dd-e811-80d2-005056825b41"
>
  <styled.div>
    <styled.span>
      Date
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-date"
    >
      10/08/2018 - 8:52pm
    </span>
    <br />
    <styled.span>
      Filename
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-filename"
    >
      filename.jpg
    </span>
    <br />
    <styled.span>
      FileUploadStatus
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-fileUploadStatus"
    >
      A status
    </span>
    <br />
  </styled.div>
</styled.div>
`;

exports[`<Note /> renders correctly with a filename 1`] = `
<styled.div
  data-bdd="note-item-e2054c02-08dd-e811-80d2-005056825b41"
  key="e2054c02-08dd-e811-80d2-005056825b41"
>
  <styled.div>
    <styled.span>
      Date
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-date"
    >
      10/08/2018 - 8:52pm
    </span>
    <br />
    <styled.span>
      Filename
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-filename"
    >
      filename.jpg
    </span>
    <br />
  </styled.div>
</styled.div>
`;

exports[`<Note /> renders correctly with text 1`] = `
<styled.div
  data-bdd="note-item-e2054c02-08dd-e811-80d2-005056825b41"
  key="e2054c02-08dd-e811-80d2-005056825b41"
>
  <styled.div>
    <styled.span>
      Date
    </styled.span>
     
    <span
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-date"
    >
      10/08/2018 - 8:52pm
    </span>
    <br />
    <styled.p
      data-bdd="note-e2054c02-08dd-e811-80d2-005056825b41-text"
    >
      some text
    </styled.p>
  </styled.div>
</styled.div>
`;
